fixed overflow for cards.

--- a/src/TVInfo.scss
+++ b/src/TVInfo.scss
@@ -82,8 +82,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
+    word-break: break-word;
     width: fit-content;
     height: 150px;
     margin: 5px;
